--- a/atividade01 _ 06-03-24/index.html
+++ b/atividade01 _ 06-03-24/index.html
@@ -1,14 +1,32 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Primerio HTML - FIAP</title>
-  </head>
-  <body>
-    <header>
-      <h1>Hello World !</h1>
-      <p>Primeiro HTML, FIAP</p>
-    </header>
-  </body>
+
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="stylesheet" href="./style.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap"
+    rel="stylesheet">
+  <title>Primerio HTML - FIAP</title>
+</head>
+
+<body>
+  <header>
+    <h1>FIAP</h1>
+    <nav class="menu">
+      <ul>
+        <li>Home</li>
+        <li>Help</li>
+        <li>Contact</li>
+        <li>About</li>
+      </ul>
+    </nav>
+  </header>
+  <main>
+    
+  </main>
+</body>
+
 </html>
