--- a/atividade01 _ 06-03-24/index.html
+++ b/atividade01 _ 06-03-24/index.html
@@ -17,15 +17,14 @@
     <h1>FIAP</h1>
     <nav class="menu">
       <ul>
-        <li>Home</li>
-        <li>Help</li>
-        <li>Contact</li>
-        <li>About</li>
+        <li><a href="">Help</a></li>
+        <li><a href="">Contact</a></li>
+        <li><a href="">About</a></li>
       </ul>
     </nav>
   </header>
   <main>
-    
+
   </main>
 </body>
 
